XW-3252: fixing z-index of fixed video container - to not cover search input nor local nav

--- a/app/styles/component/_article-featured-video.scss
+++ b/app/styles/component/_article-featured-video.scss
@@ -45,7 +45,7 @@
 			transform: translateY(-100%);
 			top: $wds-global-navigation-height;
 			width: 100%;
-			z-index: $z-site-head - 1;
+			z-index: $z-site-head - 2;
 
 			.video-placeholder {
 				background-image: none;
